--- a/src/styles/cardEdit.module.css
+++ b/src/styles/cardEdit.module.css
@@ -114,6 +114,7 @@ body {
     color: red;
     border-radius: 8px;
     border: 2px solid red;
+    transition: ease-in-out 0.3s;
 }
 .submitButton {
     font-size: 18px;
@@ -126,6 +127,7 @@ body {
     color: #646cff;
     border-radius: 8px;
     border: 2px solid ;
+    transition: ease-in-out 0.3s;
 }
 
 .cardButtons {
@@ -136,12 +138,12 @@ body {
     justify-content: space-between;
 }
 .cancelButton:hover {
-    transition: 0.3s ease-in-out;
+    transform: translateY(-3px);
     box-shadow: 0px 15px 40px -5px rgba(255, 0, 0, 0.25);
 }
 .submitButton:hover {
-    transition: 0.3s ease-in-out;
-    box-shadow: 0px 15px 40px -5px #646cff;
+    transform: translateY(-3px);
+    box-shadow: 0px 15px 40px -5px #646cff4e;
 }
 .navbar {
     margin-bottom: 50px;
