--- a/src/styles/mycards.module.css
+++ b/src/styles/mycards.module.css
@@ -3,8 +3,8 @@
     background-color: white;
     width: 100vw;
     min-height: 100vh;
-    padding-left: 30px;
 }
+
 
 .header {
     margin: 50px 0 20px;
@@ -170,5 +170,15 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
+    }
+
+    .card {
+        margin: 0 10px 20px 20px;
+        height: 250px;
+        min-width: 340px;
+        background-size: 600px;
+        border-radius: 40px / 80px;
+        color: white;
+        border: none;
     }
 }
