Many color example for cards

--- a/src/styles/mycards.module.css
+++ b/src/styles/mycards.module.css
@@ -95,7 +95,6 @@
     margin: 0 10px 20px 20px;
     height: 300px;
     min-width: 475px;
-    background-image: url('src/assets/BlueCardExample.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: 600px;
@@ -144,11 +143,10 @@
     font-size: 25px;
 }
 
-/* Background for Nomadic Card */
 .nomandiccarddiv {
     width: 130px;
     height: 80px;
-    background-image: url('src/assets/background.png');
+    background-image: url('src/assets/BlueCardExample.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: 300px;
@@ -181,4 +179,41 @@
         color: white;
         border: none;
     }
+}
+
+/* ========== Styles spécifiques pour chaque carte ========== */
+
+/* Carte ID 1 */
+.mainBalanceCard {
+    background-image: url('/src/assets/BlueCardExample.png');
+    background-size: cover;
+    background-position: center;
+}
+
+/* Carte ID 2 (Sunshine Memory) */
+.sunshineCard {
+    background-image: url('/src/assets/GreenCardExample.png');
+    background-size: cover;
+    background-position: center;
+}
+
+/* Carte ID 3 (Gift Card) */
+.giftCard {
+    background-image: url('/src/assets/PurpleCardExample.png');
+    background-size: cover;
+    background-position: center;
+}
+
+/* Carte ID 4 (Travel Card) */
+.travelCard {
+    background-image: url('/src/assets/YellowCardExample.png');
+    background-size: cover;
+    background-position: center;
+}
+
+/* Carte ID 5 (Bonus Card) */
+.bonusCard {
+    background-image: url('/src/assets/RedCardExample.png');
+    background-size: cover;
+    background-position: center;
 }
