--- a/src/styles/dashboard.module.css
+++ b/src/styles/dashboard.module.css
@@ -59,7 +59,7 @@
   background-color: #00AEEF;
   color: white;
   border: none;
-  padding: 18px 40px;
+  padding: 14px 26px;
   font-size: 25px;
   cursor: pointer;
   border-radius: 8px;
@@ -84,7 +84,7 @@
 }
 
 .searchbar {
-  margin: 0 0;
+  margin: 0 20px;
   width: 90%;
   height: 3vw;
   border: none;
@@ -105,7 +105,7 @@
   border: none;
   background: none;
   font-size: 16px;
-  margin: 10px 10px 10px;
+  margin: 10px 30px 10px;
   padding: 10px 20px;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
@@ -216,19 +216,10 @@
   }
 
   .addButton {
-    padding: 10px 26px;
-    font-size: 16px;
-    border-radius: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
     position: absolute;
     left: 50%;
-    transform: translate(-50%, 0);
-    bottom: 70%;
-    margin-bottom: 20px;
-    margin-top: -20px;
+    transform: translate(-50%, -50%);
+    margin: 0;
   }
 
   .searchcontainer {
@@ -240,8 +231,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    gap: 20px;
+    justify-content: space-around;
+    gap: 0px; 
+    width: 100%;
   }
 
   .card {
