--- a/src/styles/mycards.module.css
+++ b/src/styles/mycards.module.css
@@ -10,7 +10,9 @@
     margin: 50px 0 20px;
     padding-top: 70px;
     font-size: 300%;
+    margin-left: 50px;
 }
+
 
 /* ========== Search Bar ========== */
 .searchcontainer {
@@ -20,7 +22,7 @@
 }
 
 .searchbar {
-    margin: 20px 0;
+    margin: 20px 20px;
     width: 90%;
     height: 3vw;
     border: none;
@@ -44,7 +46,7 @@
   border: none;
   background: none;
   font-size: 16px;
-  margin: 0 10px 20px;
+  margin: 20px 20px 20px;
   padding: 10px 20px;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
