--- a/src/styles/cardAdd.module.css
+++ b/src/styles/cardAdd.module.css
@@ -8,7 +8,7 @@ body {
 .wrapper {
     width: 100vw;
     min-height: 100vh;
-    padding-top: 50px;
+    padding-top: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -112,8 +112,7 @@ body {
     font-size: 18px;
     font-weight: bold;
     margin-top: 20px;
-    width: 100%;
-    max-width: 200px;
+    width: 200px;
     height: 45px;
     background-color: white;
     color: #646cff;
@@ -134,6 +133,11 @@ body {
 .navbar {
     margin-bottom: 50px;
 }
+
+.cancelButtonMobile {
+    display: none;
+}
+
 @media (max-width: 1024px) {
     .cardContainer {
         flex-direction: column;
@@ -160,6 +164,40 @@ body {
 }
 @media (max-width: 450px) {
     .exampleImage {
-        margin-top: 100px;
+        margin-top: 0px;
+    }
+
+    .cancelButton {
+        display: none;
+    }
+    
+    .buttonContainer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+    }
+    
+    .cancelButtonMobile {
+        display: block;
+        font-size: 18px;
+        font-weight: bold;
+        width: 48%;
+        height: 45px;
+        background-color: white;
+        color: red;
+        border-radius: 8px;
+        border: 2px solid red;
+        transition: ease-in-out 0.3s;
+    }
+    
+    .cancelButtonMobile:hover {
+        transform: translateY(-3px);
+        transition: 0.3s ease-in-out;
+        box-shadow: 0px 15px 40px -5px rgba(255, 0, 0, 0.25);
+    }
+    
+    .submitButton {
+        width: 48%;
     }
 }
