Animation hover cards

--- a/src/styles/dashboard.module.css
+++ b/src/styles/dashboard.module.css
@@ -20,7 +20,7 @@
   align-items: center;
   justify-content: flex-start;
   padding: 40px;
-  margin-top: 50px;
+  margin-top: 30px;
   gap: 20px;
 }
 
@@ -147,7 +147,7 @@
 }
 
 .card {
-  margin: 0 10px 20px 20px;
+  margin: 15px 10px 20px 20px;
   height: 300px;
   min-width: 475px;
   background-image: url('src/assets/BlueCardExample.png');
@@ -235,7 +235,7 @@
   }
 
   .card {
-    margin: 20px 10px 20px 20px;
+    margin: 0px 10px 20px 20px;
     height: 250px;
     min-width: 340px;
     background-size: 600px;
@@ -270,6 +270,7 @@
   background-image: url('/src/assets/BlueCardExample.png');
   background-size: cover;
   background-position: center;
+  background-color: #3498db;
 }
 
 /* Carte ID 2 (Sunshine Memory) */
@@ -277,6 +278,7 @@
   background-image: url('/src/assets/GreenCardExample.png');
   background-size: cover;
   background-position: center;
+  background-color: #2ecc71;
 }
 
 /* Carte ID 3 (Gift Card) */
@@ -284,6 +286,7 @@
   background-image: url('/src/assets/PurpleCardExample.png');
   background-size: cover;
   background-position: center;
+  background-color: #9b59b6
 }
 
 /* Carte ID 4 (Travel Card) */
@@ -291,6 +294,7 @@
   background-image: url('/src/assets/YellowCardExample.png');
   background-size: cover;
   background-position: center;
+  background-color: #f1c40f;
 }
 
 /* Carte ID 5 (Bonus Card) */
@@ -298,4 +302,5 @@
   background-image: url('/src/assets/RedCardExample.png');
   background-size: cover;
   background-position: center;
+  background-color: #f1690f;
 }
