--- a/src/styles/cardAdd.module.css
+++ b/src/styles/cardAdd.module.css
@@ -1,4 +1,3 @@
-
 body {
     overflow-x: hidden;
     margin: 0;
@@ -37,7 +36,6 @@ body {
 }
 
 .exampleImage {
-
     width: 100%;
     max-width: 600px;
     height: auto;
@@ -84,17 +82,14 @@ body {
     background: transparent;
     outline: none;
     margin-bottom: 10%;
+    color: #000;
 }
-.dateField {
-    color: #9b96ab62;
-}
-
 .inputField:focus,
 .dateField:focus {
     border-bottom: 2px solid #646cff;
 }
 .dateField {
-    color: #9b96ab62;
+    color: #000;
 }
 .cancelButton {
     font-size: 18px;
