--- a/src/styles/cardEdit.module.css
+++ b/src/styles/cardEdit.module.css
@@ -1,4 +1,3 @@
-
 body {
     overflow-x: hidden;
     margin: 0;
@@ -93,9 +92,10 @@ body {
     background: transparent;
     outline: none;
     margin-bottom: 10%;
+    color: #000;
 }
 .dateField {
-    color: #9b96ab62;
+    color: #000;
 }
 
 .inputField:focus,
