--- a/src/styles/cardEdit.module.css
+++ b/src/styles/cardEdit.module.css
@@ -33,7 +33,7 @@ body {
     width: 50%;
 }
 .titlePreview {
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     width: 100%;
     text-align: center;
 }
@@ -42,7 +42,6 @@ body {
 }
 
 .exampleImage {
-
     width: 100%;
     max-width: 600px;
     height: auto;
@@ -92,10 +91,9 @@ body {
     background: transparent;
     outline: none;
     margin-bottom: 10%;
-    color: #000;
 }
 .dateField {
-    color: #000;
+    color: #9b96ab62;
 }
 
 .inputField:focus,
@@ -149,9 +147,22 @@ body {
     margin-bottom: 50px;
 }
 @media (max-width: 1024px) {
+    body {
+        overflow-y: auto;
+        min-height: 100vh;
+        background-color: white;
+    }
+
+    .wrapper {
+        overflow-y: auto;
+        height: auto;
+        background-color: white;
+    }
+
     .cardContainer {
         flex-direction: column;
         align-items: center;
+        margin-top: -20%;
     }
 
     .preview {
@@ -170,6 +181,12 @@ body {
     }
     .exampleImage {
         margin-top: 350px;
+    }
+
+    .titlePreview {
+        margin-top: -25px;
+        margin-bottom: 0;
+        width: 70%;
     }
 }
 @media (max-width: 450px) {
