--- a/src/styles/mycards.module.css
+++ b/src/styles/mycards.module.css
@@ -3,16 +3,13 @@
     background-color: white;
     width: 100vw;
     min-height: 100vh;
-}
-
-
-.header {
-    margin: 50px 0 20px;
     padding-top: 70px;
-    font-size: 300%;
-    margin-left: 50px;
 }
 
+.title{
+    font-size: 280%;
+    margin-left: 30px;
+}
 
 /* ========== Search Bar ========== */
 .searchcontainer {
